# ocx-mirror

./: .gitignore  .gitmodules  .licenserc.toml  .taskrc.yml  CATALOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  deny.toml  mkdocs.yml  ocx.toml  renovate.json  rust-toolchain.toml  taplo.toml  taskfile.yml
.claude/agents/: worker-architect.md  worker-architecture-explorer.md  worker-builder.md  worker-doc-reviewer.md  worker-explorer.md  worker-researcher.md  worker-reviewer.md  worker-tester.md
.claude/artifacts/: adr_cli_namespace_restructure.md  adr_mirror_source_generators.md  adr_ocx_mirror.md  adr_ocx_mirror_test_pipeline.md  adr_ocx_python_conventions.md  adr_ocx_python_crate.md  adr_pypi_lock_derivation.md  bugfix_plan_discover_fail_open.md  bugfix_plan_prepare_recrawl.md  design_spec_embeds_per_message.md  design_spec_ocx_python.md  handover_architect_mirror_test_pipeline.md  notes_mirror_test_design.md  plan_mirror_pin_drift_renovate.md  research_discord_rate_limits.md  research_mirror_per_os_smoke.md  research_python_wheel_oci.md  system_design_mirror_notify_polish.md  system_design_mirror_test_pipeline.md
.claude/rules/: meta-ai-config.md  meta-plan-status.md  quality-rust-errors.md  quality-rust-exit_codes.md  quality-rust.md  subsystem-mirror.md  workflow-bugfix.md  workflow-feature.md  workflow-git.md  workflow-intent.md  workflow-refactor.md  workflow-swarm.md
.claude/skills/architect/: SKILL.md
.claude/skills/commit/: SKILL.md  commit_reference.md
.claude/skills/finalize/: SKILL.md
.claude/skills/swarm-execute/: SKILL.md  classify.md  overlays.md  tier-high.md  tier-low.md  tier-max.md
.claude/skills/swarm-plan/: SKILL.md  classify.md  overlays.md  tier-high.md  tier-low.md  tier-max.md
.claude/skills/swarm-review/: SKILL.md  classify.md  overlays.md  tier-high.md  tier-low.md  tier-max.md
.claude/templates/artifacts/: adr.template.md  bugfix_plan.template.md  design_spec.template.md  plan.template.md  research.template.md
.config/: nextest.toml
.github/actions/build-rust/: action.yml
.github/workflows/: build-matrix.yml  deploy-dev.yml  docs.yml  oci-publish.yml  release.yml  verify.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
crates/ocx_mirror/: Cargo.toml
crates/ocx_mirror/src/: command.rs  error.rs  normalizer.rs  pipeline.rs  resolver.rs  run_summary.rs  source.rs  spec.rs  version_platform_map.rs
crates/ocx_mirror/src/command/: schema.rs
crates/ocx_mirror/src/command/package/: mod.rs  sync.rs  target_registry.rs  validate.rs
crates/ocx_mirror/src/command/package/pipeline/: describe.rs  mod.rs  notify.rs  plan.rs  prepare.rs  push.rs
crates/ocx_mirror/src/command/package/pipeline/generate/: ci.rs  mod.rs
crates/ocx_mirror/src/command/package/pipeline/generate/templates/: describe.yml  verify-generated.yml  workflow.yml
crates/ocx_mirror/src/command/registry/: mod.rs
crates/ocx_mirror/src/pipeline/: lock_derive.rs  mirror_result.rs  mirror_task.rs  ocx_cli.rs  orchestrator.rs  package.rs  progress.rs  push.rs  python_prepare.rs  python_push.rs
crates/ocx_mirror/src/source/: github_release.rs  pylock.rs  pypi.rs  url_index.rs
crates/ocx_mirror/src/spec/: assets.rs  concurrency_config.rs  metadata_config.rs  notify_config.rs  platforms_config.rs  python_config.rs  source.rs  tests_config.rs  variant.rs  wheels.rs
crates/ocx_mirror/tests/fixtures/: mirror-all-test-kinds.yml  mirror-full-platforms.yml  mirror-generator-source.yml  mirror-minimal.yml  mirror-multi-container.yml  mirror-pylock-musl-variant.yml  mirror-pylock.yml  mirror-pypi.yml  mirror-r3-discord-url.yml  mirror-rejects-ocx-install.yml  mirror-windows-arm64.yml  pylock-pycowsay.toml
crates/ocx_python/: Cargo.toml
crates/ocx_python/src/: collide.rs  compose.rs  error.rs  lib.rs  lock.rs  naming.rs  platform.rs  repack.rs  select.rs
crates/ocx_python/tests/fixtures/: README.md  generate.py
crates/ocx_python/tests/fixtures/pylock/: environments.toml  marker-forks.toml  missing-hash.toml  sdist-only.toml  valid-multi.toml
crates/ocx_python/tests/fixtures/wheels/: abi3_pkg-3.1.0-cp312-abi3-manylinux_2_28_x86_64.whl  cext_pkg-2.0.0-cp312-cp312-linux_x86_64.whl  console_pkg-1.0.0-py3-none-any.whl  data_pkg-1.0.0-py3-none-any.whl  google_cloud_bar-1.0.0-py3-none-any.whl  google_cloud_foo-1.0.0-py3-none-any.whl  legacy_ns_pkg-1.0.0-py3-none-any.whl  purelib_pkg-1.0.0-py3-none-any.whl  universal_pkg-1.0.0-py2.py3-none-any.whl
docs/: getting-started.md  index.md
docs/reference/: cli.md  environment.md  mirror-yml.md
packaging/: metadata.json
src/: annotations.rs  command.rs  discord.rs  error.rs  filter.rs  junit.rs  main.rs  normalizer.rs  resolver.rs  run_summary.rs  source.rs  spec.rs  version_platform_map.rs
src/command/: check.rs  options.rs  sync.rs  sync_all.rs  target_registry.rs  validate.rs
src/command/package/: target_registry.rs
src/command/package/pipeline/: describe.rs  notify.rs  prepare.rs  push.rs
src/command/pipeline/: describe.rs  mod.rs  notify.rs  plan.rs  prepare.rs  push.rs
src/pipeline/: download.rs  mirror_task.rs  orchestrator.rs  package.rs  progress.rs  push.rs  verify.rs
src/resolver/: asset_resolution.rs
src/source/: url_index.rs
src/spec/: asset_type.rs  assets.rs  catalog_config.rs  concurrency_config.rs  metadata_config.rs  ocx_mirror_config.rs  platforms_config.rs  source.rs  strip_components_config.rs  target.rs  variant.rs  verify_config.rs  versions_config.rs
taskfiles/: docs.taskfile.yml  release.taskfile.yml  rust.taskfile.yml
test/: conftest.py  pyproject.toml  taskfile.yml
test/fixtures/mirror-pylock-negative/: mirror-psycopg2.yml  mirror-uwsgi.yml  pylock-psycopg2.toml  pylock-uwsgi.toml
test/fixtures/mirror-shfmt-minimal/: mirror.yml
test/src/: __init__.py  helpers.py  mirror_runner.py  runner.py
test/tests/: test_mirror.py  test_mirror_e2e.py  test_mirror_libc.py  test_mirror_mount.py  test_mirror_pipeline.py  test_mirror_pylock.py  test_mirror_pypi.py
(+11 files in other folders)
