[package]
name = "ocx_mirror"
edition = "2024"
license.workspace = true
publish = false
version.workspace = true

[[bin]]
name = "ocx-mirror"
path = "src/main.rs"

[features]
default = []
jsonschema = ["dep:schemars"]

[dependencies]
ocx_lib.workspace = true
tokio.workspace = true

clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
schemars = { workspace = true, optional = true }
regex.workspace = true
url.workspace = true
octocrab.workspace = true
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
rustls.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true

[lints]
workspace = true
