[workspace]
resolver = "3"
members = ["crates/*"]
# The vendored ocx checkout is excluded so its packages bind to their own
# workspace root (external/ocx/Cargo.toml) for workspace-inherited fields —
# without the exclude, this workspace claims the subtree and inheritance
# (version.workspace etc.) fails to resolve.
exclude = ["external/ocx"]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ocx-sh/ocx-mirror"
homepage = "https://ocx.sh"

[workspace.dependencies]
# ocx_lib is consumed as a path dependency into the ocx git submodule —
# the same easy-to-maintain pattern ocx itself uses for its vendored forks.
# Bumping ocx_lib = bumping the external/ocx submodule pointer.
ocx_lib = { path = "external/ocx/crates/ocx_lib" }

# Feature lists below are copied EXACTLY from ocx's [workspace.dependencies]
# (external/ocx/Cargo.toml). Keep them in sync when bumping the submodule —
# widening defaults here (e.g. reqwest native-tls) would drag openssl into the
# shared dependency graph.
# EXCEPTION (since ocx v0.4.1, the upstream commit that extracted ocx-mirror):
# reqwest, rustls, octocrab, and url are NO LONGER in ocx's
# [workspace.dependencies] — they were mirror-only. This crate now owns them
# outright; there is no upstream source of truth to sync these four against.
tokio = { version = "1.52", features = ["full"] }
clap = { version = ">=4.5.57, <5", features = ["derive", "color"] }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
schemars = "1.2.1"
chrono = "0.4.44"
regex = "1.12.3"
url = { version = "2.5.8", features = ["serde"] }
octocrab = { version = "0.51", default-features = false, features = [
    "default-client",
    "follow-redirect",
    "jwt-aws-lc-rs",
    "retry",
    "rustls",
    "rustls-aws-lc-rs",
    "timeout",
    "tracing",
] }
quick-junit = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "json"] }
rustls = { version = "0.23.40", default-features = false, features = ["aws-lc-rs", "std"] }
sha2 = "0.11.0"
hex = "0.4.3"
tracing = "0.1.44"
tempfile = "3.27.0"

# --- ocx_python translation-library dependencies ---------------------------
# Consumed only by crates/ocx_python (the pure pylock→OCX translation lib).
# ocx_mirror does NOT depend on these.
#
# The four `uv-*` crates are pinned to ONE upstream rev (git, not a published
# crate — astral-sh/uv does not publish these to crates.io). They share the rev
# so filename parsing, tag compatibility, and PEP 508/440 marker/version
# evaluation stay mutually consistent; bump all four together (README procedure).
# `version-ranges` (pubgrub) is pulled in transitively by uv-pep508 — do NOT add
# it here.
uv-distribution-filename = { git = "https://github.com/astral-sh/uv", rev = "0adb444806e8bcea7e7a5e9ae90d1288778a0b54" }
uv-platform-tags         = { git = "https://github.com/astral-sh/uv", rev = "0adb444806e8bcea7e7a5e9ae90d1288778a0b54" }
uv-pep508                = { git = "https://github.com/astral-sh/uv", rev = "0adb444806e8bcea7e7a5e9ae90d1288778a0b54" }
uv-pep440                = { git = "https://github.com/astral-sh/uv", rev = "0adb444806e8bcea7e7a5e9ae90d1288778a0b54" }
# Versions/features copied from ocx's [workspace.dependencies] so a submodule
# bump keeps these in sync (CLAUDE.md dependency model).
toml = "1.1.2"
thiserror = "2.0.18"
tar = "0.4.46"
zstd = { version = "0.13", features = ["zstdmt"] }
zip = { version = "8.6", default-features = false, features = ["deflate"] }

# ocx_lib is developed against the ocx-sh forks of oci-client and
# docker_credential via [patch.crates-io] in the ocx workspace. Patch tables
# only apply at the consuming workspace root — they do NOT travel with path or
# git dependencies — so they are re-declared here, pointing into the nested
# submodules of external/ocx. Requires `git submodule update --init --recursive`.
#
# Invariant: the fork versions must keep satisfying ocx_lib's requirements
# (oci-client "0.16", docker_credential "1.3"). A drift surfaces as a hard
# resolution error at `cargo update`. WARNING: dropping this table does NOT
# error — cargo would silently resolve the unpatched crates.io releases.
# CI guards this with `cargo tree -i oci-client` (see verify workflow).
[patch.crates-io]
oci-client = { path = "external/ocx/external/rust-oci-client" }
docker_credential = { path = "external/ocx/external/docker_credential" }

# Deny warnings for workspace members only. Cargo applies --cap-lints to
# registry and git deps but NOT path deps; a blanket RUSTFLAGS=-D warnings
# would promote the vendored forks' upstream warnings to hard errors.
[workspace.lints.rust]
warnings = "deny"
